# toadman

./: .gitignore  README.md  pyproject.toml
toadman/: cache.py  cli.py  config.py  models.py
toadman/export/: markdown_exporter.py
toadman/fetchers/: hn_fetcher.py  rss_fetcher.py
toadman/summarizer/: kiro_summarizer.py
toadman/tui/: app.py
