[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "toadman"
version = "0.1.0"
description = "Agentic news platform"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.47.0",
    "feedparser>=6.0.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "toml>=0.10.0",
]

[project.scripts]
toadman = "toadman.cli:main"
